--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE=https://wonderful-coast-022701d03.6.azurestaticapps.net
+VITE_API_BASE=https://finmatcho1-fzulg-v1-eqc5drd3fwckbmd3.swedencentral-01.azurewebsites.net/
