--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,5 @@
-fastapi
-uvicorn
-python-dotenv
-aiofiles
-requests
-openai
-aiofiles
+fastapi==0.110.0
+uvicorn==0.29.0
+aiofiles==23.2.1
+requests==2.31.0
+python-dotenv==1.0.1
