--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE=https://finmatcho1-fzulg-v1-eqc5drd3fwckbmd3.swedencentral-01.azurewebsites.net
+VITE_API_BASE=https://scaling-acorn-976rg745rxr6h75v9-8000.app.github.dev
