--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE=https://scaling-acorn-976rg745rxr6h75v9-8000.app.github.dev
+VITE_API_BASE_URL=https://finmatcho1-fzulg-d2cad8eqbpf2a2fm.eastus2-01.azurewebsites.net
