--- a/.github/workflows/main_finmatcho1-fzulg.yml
+++ b/.github/workflows/main_finmatcho1-fzulg.yml
@@ -1,38 +1,41 @@
-name: Build and deploy Python app to Azure Web App - Finmatcho1-fzulg
+name: Deploy Backend to Azure Web App
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend.yml'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    defaults:
+      run:
+        working-directory: backend
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          cd backend
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Zip backend for deployment
+      - name: Create deployment package
         run: |
-          cd backend
-          zip -r ../release.zip . -x "venv/*" "__pycache__/*"
+          zip -r release.zip . -x "*.git*" "__pycache__/*"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
         with:
-          name: python-app
-          path: release.zip
-
+          app-name: Finmatcho1-fzulg
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: release.zip
