--- a/.github/workflows/main_finmatcho1-fzulg.yml
+++ b/.github/workflows/main_finmatcho1-fzulg.yml
@@ -39,3 +39,4 @@ jobs:
           app-name: Finmatcho1-fzulg
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: release.zip
+          working-directory: backend 
