--- a/.github/workflows/main_finmatcho1-fzulg.yml
+++ b/.github/workflows/main_finmatcho1-fzulg.yml
@@ -1,42 +1,36 @@
-name: Deploy Backend to Azure Web App
+name: Deploy FastAPI Backend to Azure
 
 on:
   push:
     branches:
       - main
-    paths:
-      - 'backend/**'
-      - '.github/workflows/main_finmatcho1-fzulg.yml'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: backend  # 👈 ensures all commands run in backend/
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r backend/requirements.txt
 
-      - name: Create deployment package
-        run: |
-          zip -r release.zip . -x "*.git*" "__pycache__/*" "venv/*" "*.pyc"
+    - name: Zip backend for deployment
+      run: |
+        cd backend
+        zip -r ../release.zip . -x "venv/*" "__pycache__/*" "*.pyc"
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: Finmatcho1-fzulg
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: release.zip
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: Finmatcho1-fzulg
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: release.zip
