--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
+    "@fluentui/react": "^8.122.15",
     "@radix-ui/react-icons": "^1.3.2",
     "axios": "^1.8.4",
     "react": "^19.0.0",
