--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=https://finmatcho1-fzulg-d2cad8eqbpf2a2fm.eastus2-01.azurewebsites.net
+VITE_API_BASE=https://finmatcho1-fzulg-d2cad8eqbpf2a2fm.eastus2-01.azurewebsites.net
